--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,33 @@
 // @use "components/sections/section-posts";
 
 // @use "components/footer/footer";
-body {
-    background-color: red;
-}
+@import "../../libs/normalize.css/normalize";
+
+@import "presets/skin";
+@import "presets/variables";
+
+@import "mixins/extends";
+@import "mixins/mixins-media";
+@import "mixins/mixins";
+
+@import "common/typography";
+@import "common/classes";
+
+@import "components/header/header";
+@import "components/header/header-logo";
+@import "components/header/header-menu";
+@import "components/header/header-navbar";
+@import "components/header/header-overlay";
+@import "components/header/header-content";
+
+
+
+
+
+
+
+
+
+
+
+
